--- a/static/scss/intro-bar.scss
+++ b/static/scss/intro-bar.scss
@@ -66,7 +66,7 @@
   &--horizontal {
     margin-bottom: 10rem;
     background-attachment: fixed;
-    background-position: center;
+    background-position: bottom;
     box-shadow: 0 5px 5px rgba(0, 0, 0, .25);
     position: relative;
     padding: 5rem 0;
@@ -74,16 +74,16 @@
 
     &:before {
       z-index: 0;
-      opacity: .5;
+      opacity: .75;
     }
 
     &:after {
       content: '';
     }
 
-    .intro-bar__name,
+    .intro-bar__header,
     .intro-bar__subhead,
-    .social-links {
+    .intro-bar__social-nav {
       z-index: 1;
     }
 
